src/objects/Course_Attachment__c.object
<CustomObject>
    <fields>
        <fullName>Attachment_type__c</fullName>
        <description>Specify whether Pre-Work or Post-Work attachment or Course Material</description>
        <label>Attachment type</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course-Material</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <referenceTo>FA_Course__c</referenceTo>
        <relationshipLabel>Course Attachments</relationshipLabel>
        <relationshipName>Course_Attachments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FA_Download_Available_From__c</fullName>
        <description>The date from which the file is available for download</description>
        <label>Download Available From</label>
        <type>Date</type>
    </fields>
    <label>Course Attachment</label>
    <nameField>
        <label>Course Attachments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>